src/components/Login.css
.lgin{
    background-color: #EEEEEE;
}

.flex-container {
    display: flex;
    flex-wrap: wrap;


    /* grid-template-columns: repeat(2,1fr); */
    /* grid-template-rows: repeat(1,1fr); */
    /* padding-right: 10rem; */

}

.flex-item2 {
    /* for bg pic */
    position: relative;
    flex: 100%;
    display: flex;
    margin-top: 30px;
    /* margin-bottom: 123px; */
}

.flex-item1 {
    /* for logo icon  */
    flex: 100%;
    display: flex;
    position: absolute;
    top: 7%;
    left: 45%;
}
.nurseImg
{
    position: absolute;
    flex: 100%;
}

.grid-container {

    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-area: 3 / 2 / span 3/ span 3;
}


.nurseGrid{
    position: absolute;
    top: 20%;
    display: grid;
    grid-template-columns: repeat(11, 1fr);
    /* grid-template-rows: repeat(2, 1fr); */
    width: 100%;

}
.nurseImgItem {
 /* display: grid; */
/* grid-area: item1; */
top: 0px;
/* border: 2px solid; */
grid-area: 1 / 3 / 3 / span 2;
padding-top: 20%;
padding-left: 15%;
}
.flex-item3 {
    /* for card */



}

.fieldAlign {
    text-align: center;
}


@media screen {
    
}

